--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.30.8</version>
+        </dependency>
+
     </dependencies>
     
      <build>
